# security-automation-toolkit

./: .gitignore  README.md  knexfile.js  main.py  package-lock.json  package.json  pyproject.toml
examples/: compliance_collector.sh  port_scanner.py  sample.nessus  sample_security_check.py
src/: routes.ts
src/common/: getClientByJwtToken.ts  hiders.ts  verify2fa.ts
src/controllers/: accountController.ts  clientController.ts  emailController.ts  reflinkController.ts  walletController.ts
src/knex/: knex.js
src/knex/migrations/: 20220214210530_users.js  20220221204643_alter_users_2fa.js  20220306195820_alter_users_emailchange.js  20220306200115_alter_users_phone.js  20220316205617_alter_users_reflink.js  20220316213434_create_table_reflinks.js  20220326214257_create_table_frezed_accounts.js
src/middlewares/: auth.ts  jwt.ts  logger.ts  validator.ts
src/middlewares/validators/: email.ts  twofa.ts
src/responses/responses/: common.ts
src/security_toolkit/: __init__.py  __main__.py
src/security_toolkit/cli/: __init__.py  main.py
src/security_toolkit/core/: __init__.py  config.py  database.py  models.py
src/security_toolkit/reporting/: __init__.py  base.py  csv_reporter.py  html_reporter.py  json_reporter.py  markdown_reporter.py
src/services/: accountService.ts  clientService.ts  cryptoService.ts  emailService.ts  jwtService.ts  reflinkService.ts  walletService.ts
tests/: __init__.py  conftest.py  test_cli.py  test_database.py  test_log_analyzer.py  test_models.py  test_reporting.py  test_scripts.py  test_vuln_scan.py
(+28 files in other folders)
